--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         
-        <div><img src="photos/logo.png"  id="logo"></div>
+        <div><img src="Photos/logo.png"  id="logo"></div>
         <div><h2>jersy Store</h2></div>
         <div><a href="http://google.com"><i class="fa fa-instagram" style="font-size:40px;color:#1E3050"></i></a></div>
     
