--- a/index.html
+++ b/index.html
@@ -55,45 +55,7 @@
     <!-- Popular Leagues Section -->
     <section class="trending-section">
         <h2 class="trending-title">Popular Leagues</h2>
-        <div class="leagues">
-            <div class="league">
-                <a href="">
-                    <img src="https://upload.wikimedia.org/wikipedia/ar/7/72/Premier_league_logo.svg" >
-                    <span>Premier League</span>
-                </a>
-            </div>
-            <div class="league">
-                <a href="">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/LaLiga_logo_2023.svg">
-                    <span>La Liga</span>
-                </a>
-            </div>
-            <div class="league">
-                <a href="">
-                    <img src="https://upload.wikimedia.org/wikipedia/ar/b/bf/Serie_A_TIM_-_Logo_%282019%29.svg">
-                    <span>Serie A</span>
-                </a>
-            </div>
-            <div class="league">
-                <a href="">
-                    <img src="https://upload.wikimedia.org/wikipedia/ar/d/df/Bundesliga_logo_%282017%29.svg" >
-                    <span>Bundesliga</span>
-                </a>
-            </div>
-            <div class="league">
-                <a href="">
-                    <img src="https://upload.wikimedia.org/wikipedia/ar/3/33/Brasileir%C3%A3o.svg" >
-                    <span>Brasileirão</span>
-                </a>
-            </div>
-            
-            <div class="league">
-                <a href="">
-                    <img src="https://upload.wikimedia.org/wikipedia/fr/d/d9/Logo_Ligue_1_2024.svg" >
-                    <span >Ligue 1</span>
-                </a>
-            </div>
-        </div>
+        <div class="leagues"></div>
     </section>
     <div>
         <img class="banner" src="https://cdn.dotpe.in/longtail/themes/8073865/meueHZQq.webp" alt="">
