--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
         
         <div><img src="Photos/logo.png"  id="logo"></div>
-        <div><h2>jersy Store</h2></div>
-        <div><a href="http://google.com"><i class="fa fa-instagram" style="font-size:40px;color:#1E3050"></i></a></div>
+        <div><h2>Offside Jerseys</h2></div>
+        <div><a href="https://www.instagram.com/offsidejerseys0?igsh=MnNoeDV3dDIyaWFo"><i class="fa fa-instagram" style="font-size:40px;color:#1E3050"></i></a></div>
     
     </header>
 
